--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/icon_link.jpg">
-    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&display=swap" rel="stylesheet">
-    <title>tapsiriq-1</title>
+    <title>HOME</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
-    <section class="header">
+    <section class="navbar">
         <nav>
             <ul>
-                <li><a href="#">Kateqoriya</a></li>
-                <li><a href="#">Hekayəmiz</a></li>
-                <li><a href="#">Kampaniyalar</a></li>
-                <li><a href="#">Məhsullar</a></li>
-                <li><a href="#">Əlaqə</a></li>
+                <a href="./index.html" class="logo" title="logo">LOGO</a>
+                <li><a href="./index.html">Ana səhifə</a></li>
+                <li><a href="./pages/category.html">Kateqoriya</a></li>
+                <li><a href="./pages/about.html">Haqqımızda</a></li>
+                <li><a href="./pages/contact.html">Əlaqə</a></li>
             </ul>
         </nav>
     </section>
     
     <section class="container">
-        <img src="./img/fullStack_image.png" alt="">
+        <img src="./img/fullStack_image.png">
         <h1>Frontend və Backend proqramlaşdırma nədir?</h1>
         <p>
             Siz hər gün Facebook və ya Google səhifələrinə URLi brauzerə 
@@ -61,7 +61,7 @@
             əlaqədə olan xüsusiyyətləri funksiyonallaşdırmaq üçün server və ya 
             arxa tərəfdə işləyən anlayış kimi başa düşülür.
         </p>
-        <img src="./img/front_backEnd.png" alt="">
+        <img src="./img/front_backEnd.png">
     </section>
 
     <section class="contact">
