project is completed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
     
     <section class="container">
-        <img src="./img/fullStack_image.png">
+        <img src="./img/fullstack_image.png">
         <h1>Frontend və Backend proqramlaşdırma nədir?</h1>
         <p>
             Siz hər gün Facebook və ya Google səhifələrinə URLi brauzerə 
@@ -61,7 +61,7 @@
             əlaqədə olan xüsusiyyətləri funksiyonallaşdırmaq üçün server və ya 
             arxa tərəfdə işləyən anlayış kimi başa düşülür.
         </p>
-        <img src="./img/front_backEnd.png">
+        <img src="./img/front_backend.png">
     </section>
 
     <section class="contact">
