project is completed

--- a/pages/about.html
+++ b/pages/about.html
@@ -21,7 +21,7 @@
     </section>
     <h1 class="header">Haqqımızda :</h1>
     <section class="container">
-        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h1>
+        <h1>Biz sizə Proqramlaşdırma dilərini tədris edəcəyik.</h1>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Repellendus iste deserunt ab, minima voluptas animi hic 
@@ -32,6 +32,9 @@
             Ut, odio dolor?
             <br>
             <br>
+            <!-- git add .
+            git commit -m "projectis completed"
+        git push -u origin main -->
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
              Repellendus iste deserunt ab, minima voluptas animi hic 
              corporis optio rerum praesentium? Sed voluptate ab corrupti 
@@ -41,7 +44,7 @@
              Ut, odio dolor?
         </p>
         <br>
-        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h1>
+        <h1>Proqramlaşdırma dillərinə FrontEnd və BackEnd aiddir.</h1>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Repellendus iste deserunt ab, minima voluptas animi hic 
